header: fixed image size

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <!-- Header Row -->
     <tr> 
      <td>
-       <table class="header-image" style="background:white; width:30%;" width="30%">
+       <table class="header-image" style="background:white; width:50%;" width="50%">
         <tr>
           <td >
-            <img src="img/treehouse-logo.png" alt="treehouse logo">
+            <img src="img/treehouse-logo.png"   style="width:130px; height:29px;"  alt="treehouse logo">
           </td>
         </tr>
        </table>
