header: align menu links

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     }
   </style>
 </head>
-<body>
+<body style="background: #F9E6FF;">
   <!--Container-->
-  <table class="container" style="background: #F9E6FF; width:600px;" width="600px" align="center">
+  <table class="container" style="background-color: white;" width:600px; width="600px" align="center">
     <!-- Header Row -->
     <tr> 
      <td>
@@ -25,6 +25,12 @@
           </td>
         </tr>
        </table>
+     </td>
+     <td align="right">
+            <a href="https://https://teamtreehouse.com/techdegree">Techdegree</a>
+            <a href="https://teamtreehouse.com/tracks">Tracks</a>
+            <a href="https://teamtreehouse.com/libray">Library</a>
+            <a href="https://teamtreehouse.com/community">Community</a>
      </td>
    </tr><!-- End of Header Row-->
    
