header: finished header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <table class="container" style="background-color: white;" width:600px; width="600px" align="center">
     <!-- Header Row -->
     <tr> 
-     <td>
+     <td style="padding:15px 40px;">
        <table class="header-image" style="background:white; width:50%;" width="50%">
         <tr>
           <td >
@@ -26,7 +26,7 @@
         </tr>
        </table>
      </td>
-     <td align="right">
+     <td align="right" style="padding:15px 40px;">
             <a href="https://https://teamtreehouse.com/techdegree">Techdegree</a>
             <a href="https://teamtreehouse.com/tracks">Tracks</a>
             <a href="https://teamtreehouse.com/libray">Library</a>
