header: menu links padding and color

--- a/index.html
+++ b/index.html
@@ -15,25 +15,31 @@
 <body style="background: #F9E6FF;">
   <!--Container-->
   <table class="container" style="background-color: white;" width:600px; width="600px" align="center">
+ 
+ 
     <!-- Header Row -->
     <tr> 
      <td style="padding:15px 40px;">
+      <!--logo image table-->
        <table class="header-image" style="background:white; width:50%;" width="50%">
         <tr>
           <td >
             <img src="img/treehouse-logo.png"   style="width:130px; height:29px;"  alt="treehouse logo">
           </td>
         </tr>
-       </table>
+       </table> <!--end logo image table-->
      </td>
-     <td align="right" style="padding:15px 40px;">
-            <a href="https://https://teamtreehouse.com/techdegree">Techdegree</a>
-            <a href="https://teamtreehouse.com/tracks">Tracks</a>
-            <a href="https://teamtreehouse.com/libray">Library</a>
-            <a href="https://teamtreehouse.com/community">Community</a>
+     <td align="right" style="padding:15px 40px; ">
+            <a href="https://https://teamtreehouse.com/techdegree" style="padding:5px; color: #15c;">Techdegree</a>
+            <a href="https://teamtreehouse.com/tracks" style="padding:5px;color: #15c;">Tracks</a>
+            <a href="https://teamtreehouse.com/libray" style="padding:5px;color: #15c;">Library</a>
+            <a href="https://teamtreehouse.com/community" style="padding:5px; color: #15c;">Community</a>
      </td>
    </tr><!-- End of Header Row-->
    
+
+
+
   </table> 
   <!-- End of Container-->
 </body>
