hero: Started hero row

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>My Document</title>
   <style>
     table {
     border-collapse: separate;
@@ -36,6 +36,21 @@
             <a href="https://teamtreehouse.com/community" style="padding:5px; color: #15c;">Community</a>
      </td>
    </tr><!-- End of Header Row-->
+
+
+   
+   <!-- Hero Image Row-->
+   <tr>
+     <td>
+       <table>
+         <tr>
+           <td>
+             <img  class="" src="/img/festival.png" alt="hero image of treehouse festival artwork"  >
+           </td>
+         </tr>
+       </table>
+     </td>
+   </tr><!-- End of Hero Image Row-->
    
 
 
