header: fixed horizontal spacing between image and menu

--- a/index.html
+++ b/index.html
@@ -25,23 +25,19 @@
     <tr> 
       <td style="padding:15px 40px; background:white;" width="100%" >
        <!--logo image table-->
-        <table class="header-image-table" border="1" width="50%;" >
+        <table class="header-image-table" border="0"  >
          <tr>
-           <td >
+           <td width="50%" >
              <img src="img/treehouse-logo.png"   style="width:130px; height:29px;"  alt="treehouse logo">
            </td>
+           <td width="50%">
+            <a href="https://https://teamtreehouse.com/techdegree" >Techdegree</a>
+            <a href="https://teamtreehouse.com/tracks" >Tracks</a>
+            <a href="https://teamtreehouse.com/libray" >Library</a>
+            <a href="https://teamtreehouse.com/community" >Community</a>
+          </td>
          </tr>
         </table> <!--end logo image table-->
-        <table class="header-menu-table" border="1" width="50%;">
-          <tr>
-            <td>
-              <a href="https://https://teamtreehouse.com/techdegree" >Techdegree</a>
-              <a href="https://teamtreehouse.com/tracks" >Tracks</a>
-              <a href="https://teamtreehouse.com/libray" >Library</a>
-              <a href="https://teamtreehouse.com/community" >Community</a>
-            </td>
-          </tr>
-        </table>   
       </td>  
     </tr><!-- End of Header Row-->
  
