header: fixed menu anchor link padding

--- a/test.html
+++ b/test.html
@@ -9,12 +9,13 @@
 <body>
   <tr>
     <td>
-      <table style="width:600px; background:blue;">
-        <tr>
-          <td>
-            <img src="img/festival.png" alt="" style="width:100%; height:300px;">
-          </td>
-        </tr>
+      <table style="width:600px; background:blue;" >
+        <td width="60%" style="margin-left: 5px; background-color: red;" >
+          <a href="https://https://teamtreehouse.com/techdegree" style="padding:0 5px;" >Techdegree</a>
+          <a href="https://teamtreehouse.com/tracks" style="padding:0 5px;" >Tracks</a>
+          <a href="https://teamtreehouse.com/libray" style="padding:0 5px;" >Library</a>
+          <a href="https://teamtreehouse.com/community" style="padding:0 5px;">Community</a>
+        </td>
       </table>
     </td>
   </tr>
@@ -30,6 +31,23 @@
       <span> test </span> 
     </td>
   </tr>
-
+  <tr> 
+    <td style="padding:15px 40px; background:white;" width="100%" >
+     <!--logo image table-->
+      <table class="header-image-table" border="0"  >
+       <tr>
+         <td width="50%" >
+           <img src="img/treehouse-logo.png"   style="width:130px; height:29px;"  alt="treehouse logo">
+         </td>
+         <td width="50%" align="right">
+          <a href="https://https://teamtreehouse.com/techdegree" >Techdegree</a>
+          <a href="https://teamtreehouse.com/tracks" >Tracks</a>
+          <a href="https://teamtreehouse.com/libray" >Library</a>
+          <a href="https://teamtreehouse.com/community" >Community</a>
+        </td>
+       </tr>
+      </table> <!--end logo image table-->
+    </td>  
+  </tr>
 </body>
 </html>
