--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
  
     <!-- Header Row -->
     <tr> 
-      <td style="padding:15px 40px; background:white;" width="100%" >
+      <td style="padding:15px 20px; background:white;" width="100%" >
        <!--logo image table-->
         <table class="header-image-table" border="0"  >
          <tr>
-           <td width="50%" >
+           <td width="20%" >
              <img src="img/treehouse-logo.png"   style="width:130px; height:29px;"  alt="treehouse logo">
            </td>
-           <td width="50%">
-            <a href="https://https://teamtreehouse.com/techdegree" >Techdegree</a>
-            <a href="https://teamtreehouse.com/tracks" >Tracks</a>
-            <a href="https://teamtreehouse.com/libray" >Library</a>
-            <a href="https://teamtreehouse.com/community" >Community</a>
+           <td width="50%" align="right">
+            <a href="https://https://teamtreehouse.com/techdegree" style="padding:0 5px;" >Techdegree</a>
+            <a href="https://teamtreehouse.com/tracks" style="padding:0 5px;" >Tracks</a>
+            <a href="https://teamtreehouse.com/libray" style="padding:0 5px;" >Library</a>
+            <a href="https://teamtreehouse.com/community" style="padding:0 5px;">Community</a>
           </td>
          </tr>
         </table> <!--end logo image table-->
