--- a/index.html
+++ b/index.html
@@ -71,10 +71,13 @@
       </td>
     </tr>
     <tr>
-      <td align="center" style="text-align: center;">
-        <button style="background-color: #00a4bd; color:white;  border-radius:5px; font-size:16px; padding:15px 50px;">
-          Join the Festival
-        </button>
+      <td align="center" style="text-align: center; padding-top:20px; padding-bottom:10px;">
+        <a href="http:\\treehouse.com\">
+          <button style="background-color: #00a4bd; color:white; border-color:white; border-radius:5px; font-size:16px; padding:15px 50px;  ">
+            Join the Festival
+          </button>
+        </a>
+        
       </td>
     </tr>  
     
