--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
     
     <!-- Today's Schedule Row-->
     <tr>
-      <td style="padding:30px 20px; ">
+      <td style="padding:30px 20px; border-top: 2px #65CF80 solid;
+      ">
         <table class="todays-schedule-table" style="width:100%;">
           <tr>
             <td align="center" style="text-align: center; padding: 10px 20px; width:100%;">
