Today's schedule row: added <hr>

--- a/index.html
+++ b/index.html
@@ -86,9 +86,14 @@
     
     <!-- Today's Schedule Row-->
     <tr>
-      <td style="padding:30px 20px; border-top: 2px #65CF80 solid;
+      <td style="padding:30px 20px; ;
       ">
         <table class="todays-schedule-table" style="width:100%;">
+          <tr>
+            <td>
+              <hr style="border-top: 2px solid #17bf62">
+            </td>
+          </tr>
           <tr>
             <td align="center" style="text-align: center; padding: 10px 20px; width:100%;">
               <h2 style="color: #2e5cb7; margin:0px;"> Today's Schedule </h2>
