today's schedule row: adjusted padding

--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
     
     <!-- Today's Schedule Row-->
     <tr>
-      <td style="padding:30px 20px; ;
-      ">
+      <td style="padding:0px 20px 40px;">
         <table class="todays-schedule-table" style="width:100%;">
           <tr>
             <td>
@@ -95,7 +94,7 @@
             </td>
           </tr>
           <tr>
-            <td align="center" style="text-align: center; padding: 10px 20px; width:100%;">
+            <td align="center" style="text-align: center; padding: 40px 20px; width:100%;">
               <h2 style="color: #2e5cb7; margin:0px;"> Today's Schedule </h2>
             </td>
           </tr>
