today's schedule: added schedules

--- a/index.html
+++ b/index.html
@@ -112,10 +112,85 @@
                    <span style="font-size: 16px; font-weight:normal; font-style: normal;"> With Anthony Culver (He/Him)</span>          
                   </p>
                 </td>
-
               </tr>
             </table>
-          </tr>        
+          </tr>
+          <tr>
+            <td>
+              <table class="date-schedule-table" width="100%" >
+                <tr>
+                  <td width="40%;" style="text-align:center; color:#576467 ;">
+                    <p style="margin-top: 10px; font-size: 24px; font-weight: bold;">
+                      9:30AM PST
+                    </p>
+                  </td>
+                  <td width="60%; " style="padding-left:10px;">
+                    <p style="color:#576467;  line-height: 20px; font-size: 18px; font-weight:bold; font-style:italic;">
+                      Protyping with Sound: Audio & Speech Playback in Adobe XD <br> 
+                      <span style="font-size: 16px; font-weight:normal; font-style: normal;"> With Matt Rae (He/Him)</span>  
+                    </p>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr> 
+          <tr>
+            <td>
+              <table class="date-schedule-table" width="100%" >
+                <tr>
+                  <td width="40%;" style="text-align:center; color:#576467 ;">
+                    <p style="margin-top: 10px; font-size: 24px; font-weight: bold;">
+                      10AM PST
+                    </p>
+                  </td>
+                  <td width="60%; " style="padding-left:10px;">
+                    <p style="color:#576467;  line-height: 20px; font-size: 18px; font-weight:bold; font-style:italic;">
+                      My Developer Journey and Q&A <br> 
+                      <span style="font-size: 16px; font-weight:normal; font-style: normal;"> With Anthony Culver (He/Him)</span>  
+                    </p>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr> 
+          <tr>
+            <td>
+              <table class="date-schedule-table" width="100%" >
+                <tr>
+                  <td width="40%;" style="text-align:center; color:#576467 ;">
+                    <p style="margin-top: 10px; font-size: 24px; font-weight: bold;">
+                      10AM PST
+                    </p>
+                  </td>
+                  <td width="60%; " style="padding-left:10px;">
+                    <p style="color:#576467;  line-height: 20px; font-size: 18px; font-weight:bold; font-style:italic;">
+                      Women in Engineering Wo Run the World? <br> 
+                      <span style="font-size: 16px; font-weight:normal; font-style: normal;"> With Dr. Toni Josato (She/Her), Leila Kaneda (She/Her), Betza Villarreal, and Daelynn Moyer (She/Her)</span>  
+                    </p>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>   
+          <tr>
+            <td>
+              <table class="date-schedule-table" width="100%" >
+                <tr>
+                  <td width="40%;" style="text-align:center; color:#576467 ;">
+                    <p style="margin-top: 10px; font-size: 24px; font-weight: bold;">
+                      11AM PST
+                    </p>
+                  </td>
+                  <td width="60%; " style="padding-left:10px;">
+                    <p style="color:#576467;  line-height: 20px; font-size: 18px; font-weight:bold; font-style:italic;">
+                      Music Hour<br> 
+                      <span style="font-size: 16px; font-weight:normal; font-style: normal;"> With Mic Crenshaw</span>  
+                    </p>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>      
         </table>
       </td>
     </tr>   <!-- End Today's Schedule Row-->
