today's schedule:fixed padding and alignment issues

--- a/index.html
+++ b/index.html
@@ -99,34 +99,36 @@
             </td>
           </tr>
           <tr>
-            <table class="date-schedule-table" width="100%"  >
-              <tr>
-                <td width="40%;" style="text-align:center; color:#576467 ;">
-                  <p style="margin-top: 10px; font-size: 24px; font-weight: bold;">
-                    9AM PST
-                  </p>  
-                </td>
-                <td width="60%; " style="padding-left:10px;"> 
-                  <p style="color:#576467;  line-height: 20px; font-size: 18px; font-weight:bold; font-style:italic;">
-                    No Such Thing as the Right Path <br> 
-                   <span style="font-size: 16px; font-weight:normal; font-style: normal;"> With Anthony Culver (He/Him)</span>          
-                  </p>
-                </td>
-              </tr>
-            </table>
-          </tr>
-          <tr>
             <td>
               <table class="date-schedule-table" width="100%" >
                 <tr>
                   <td width="40%;" style="text-align:center; color:#576467 ;">
+                    <p style="margin-top: 10px; font-size: 24px; font-weight: bold;">
+                      9AM PST
+                    </p>
+                  </td>
+                  <td width="60%; " style="padding-left:10px;">
+                    <p style="color:#576467;  line-height: 20px; font-size: 18px; font-weight:bold; font-style:italic;">
+                      No Such Thing as the Right Path <br> 
+                      <span style="font-size: 16px; font-weight:normal; font-style: normal;"> With Anthony Culver (He/Him) </span>  
+                    </p>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr> 
+          <tr>
+            <td>
+              <table class="date-schedule-table" width="100%" >
+                <tr>
+                  <td width="40%;" style="text-align:center; color:#576467 ;padding-bottom: 20px ;">
                     <p style="margin-top: 10px; font-size: 24px; font-weight: bold;">
                       9:30AM PST
                     </p>
                   </td>
                   <td width="60%; " style="padding-left:10px;">
                     <p style="color:#576467;  line-height: 20px; font-size: 18px; font-weight:bold; font-style:italic;">
-                      Protyping with Sound: Audio & Speech Playback in Adobe XD <br> 
+                      Prototyping with Sound: Audio & Speech Playback in Adobe XD <br> 
                       <span style="font-size: 16px; font-weight:normal; font-style: normal;"> With Matt Rae (He/Him)</span>  
                     </p>
                   </td>
@@ -146,7 +148,7 @@
                   <td width="60%; " style="padding-left:10px;">
                     <p style="color:#576467;  line-height: 20px; font-size: 18px; font-weight:bold; font-style:italic;">
                       My Developer Journey and Q&A <br> 
-                      <span style="font-size: 16px; font-weight:normal; font-style: normal;"> With Anthony Culver (He/Him)</span>  
+                      <span style="font-size: 16px; font-weight:normal; font-style: normal;"> With Aaron Billings (He/Him) and Ryan Mouser (He/Him)</span>  
                     </p>
                   </td>
                 </tr>
@@ -157,7 +159,7 @@
             <td>
               <table class="date-schedule-table" width="100%" >
                 <tr>
-                  <td width="40%;" style="text-align:center; color:#576467 ;">
+                  <td width="40%;" style="text-align:center; color:#576467 ;padding-bottom: 60px;">
                     <p style="margin-top: 10px; font-size: 24px; font-weight: bold;">
                       10AM PST
                     </p>
