treehouse festival: fixed text color

--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
           </tr>
           <tr>
             <td align="center" style="text-align: center; padding: 10px 20px;  ">
-              <p style="margin: 0px;">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ullam distinctio perspiciatis aliquam architecto repudiandae veritatis porro aut facere! Adipisci quod dicta excepturi repellendus assumenda quas similique, voluptas aliquam, officiis aperiam voluptates? Tempore natus velit temporibus voluptatem! Asperiores modi labore nisi consequatur sapiente officia quam.
+              <p style="margin: 0px; color: #576467;">
+                Welcome to the first day of the Treehouse Festival! The event is now open. The next five days are going to be a journey of learning, networking, advice, crucial conversations, and so much more. We look forward to having you join thousands of Treehouse students for this special event. See you there!
               </p>
             </td>
           </tr>
           <tr>
             <td align="center" style="text-align: center; padding-top:20px; padding-bottom:10px;">
               <a href="http:\\treehouse.com\">
-                <button style="background-color: #00a4bd; color:white;  border-radius:5px; font-size:16px; padding:15px 50px; border:0px; ">
+                <button style="background-color: #00a4bd; color:white;  border-radius:5px; font-size:16px; font-weight: bold; padding:15px 50px; border:0px; ">
                   Join the Festival
                 </button>
               </a>   
@@ -192,7 +192,16 @@
                 </tr>
               </table>
             </td>
-          </tr>      
+          </tr>
+          <tr>
+            <td align="center" style="text-align: center; padding-top:20px; padding-bottom:10px;">
+              <a href="http:\\treehouse.com\">
+                <button style="background-color: #00a4bd; color:white;  border-radius:5px; font-size:16px; padding:15px 50px; font-weight: bold; border:0px; ">
+                  Join the Festival
+                </button>
+              </a>   
+            </td>
+          </tr>       
         </table>
       </td>
     </tr>   <!-- End Today's Schedule Row-->
