Treehouse festival fixed bold text

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           </tr>
           <tr>
             <td align="center" style="text-align: center; padding: 10px 20px;  ">
-              <p style="margin: 0px; color: #576467;">
-                Welcome to the first day of the Treehouse Festival! The event is now open. The next five days are going to be a journey of learning, networking, advice, crucial conversations, and so much more. We look forward to having you join thousands of Treehouse students for this special event. See you there!
+              <p style="margin: 0px; color: #576467; line-height:30px;">
+                Welcome to the first day of the Treehouse Festival! <b>The event is now open.</b> The next five days are going to be a journey of learning, networking, advice, crucial conversations, and so much more. We look forward to having you join thousands of Treehouse students for this special event. See you there!
               </p>
             </td>
           </tr>
