3 months Row: added

--- a/index.html
+++ b/index.html
@@ -220,6 +220,33 @@
       </td>
     </tr> <!-- End Giveaway Hero Image Row-->
     
+    <!-- Win Three Months Row-->
+    <tr>
+      <td style="padding-bottom: 40px;">
+        <table class="treehouse-festival-table">
+          <tr>
+            <td align="center" style="text-align: center; padding: 10px 20px; ">
+              <h2 style="color: #2e5cb7; margin:0px;"> Win three months of Techdegree or one year of Adobe Creative Cloud</h2>
+            </td>
+          </tr>
+          <tr>
+            <td align="center" style="text-align: center; padding: 10px 20px;  ">
+              <p style="margin: 0px; color: #576467; line-height:30px;">All registrants to the Treehouse Festival will automatically be entered to win either three months of Techdegree or one year of Adobe Creative Cloud. Are you a current student who likes free stuff? Make sure you're registered for the Festival to be entered in today's giveaway!
+              </p>
+            </td>
+          </tr>
+          <tr>
+            <td align="center" style="text-align: center; padding-top:20px; padding-bottom:10px;">
+              <a href="http:\\treehouse.com\">
+                <button style="background-color: #00a4bd; color:white;  border-radius:5px; font-size:16px; font-weight: bold; padding:15px 50px; border:0px; ">
+                  Register Today
+                </button>
+              </a>   
+            </td>
+          </tr> 
+        </table>
+      </td>
+    </tr>   <!-- End Win Three Months Row-->
  
  
     
