this event: fixed <td> padding

--- a/index.html
+++ b/index.html
@@ -264,8 +264,9 @@
           </tr>     
         </table>
       </td>
-    </tr>   
-    <tr>
+    </tr>  <!-- End of Are You Ready Row--> 
+
+    <tr> <!--One hundered Row-->
       <td>
         <table>
           <tr>
@@ -283,7 +284,42 @@
           </tr>
         </table>
       </td>
-    </tr><!-- End Are You Ready Row-->
+    </tr><!-- End One hundered Row-->
+
+
+    <!--This event Row-->
+    <tr>
+      <td style="background-color: #F0F5F6;">
+        <table width="100%" ">
+          <tr>
+            <td align="center" style="text-align: center; padding: 20px 20px; width:100%;">
+              <h2 style="color: #2e5cb7; margin:0px;"> This event is proudly supported by </h2>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <table width="100%">
+                <tr>
+                  <td>
+                    <img src="img/tribaja-logo.png" alt="Tribaja Logo" style="width:90px; height:28px;">
+                  </td>
+                  <td>
+                    <img src="img/adobe-logo.png" alt="Adobe XD Logo" style="width:90px; height:28px;">
+                  </td>
+                  <td>
+                    <img src="img/pdxwit-logo.png" alt="PDXWIT Logo" style="width:90px; height:28px;">
+                  </td>
+                  <td>
+                    <img src="img/chicktech-logo.png" alt="ChickTech Logo" style="width:90px; height:28px;">
+                  </td>
+                  <td></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr> <!--This event Row-->
     
   </table> 
   <!-- End of Container-->
