this event: fixed <h2> margin

--- a/index.html
+++ b/index.html
@@ -289,11 +289,11 @@
 
     <!--This event Row-->
     <tr>
-      <td style="background-color: #F0F5F6;">
+      <td style="background-color: #F0F5F6; padding:50px;">
         <table width="100%" ">
           <tr>
             <td align="center" style="text-align: center; padding: 20px 20px; width:100%;">
-              <h2 style="color: #2e5cb7; margin:0px;"> This event is proudly supported by </h2>
+              <h2 style="color: #2e5cb7; margin-bottom: 10px;;"> This event is proudly supported by </h2>
             </td>
           </tr>
           <tr>
@@ -319,7 +319,7 @@
           </tr>
         </table>
       </td>
-    </tr> <!--This event Row-->
+    </tr> 
     
   </table> 
   <!-- End of Container-->
