--- a/index.html
+++ b/index.html
@@ -319,8 +319,20 @@
           </tr>
         </table>
       </td>
-    </tr> 
-    
+    </tr> <!--This event Row-->
+    <tr>
+      <td style="background-color: #323952; color:white; " >
+        <table >
+          <tr>
+            <td >
+              <p style="margin:100px 32px;" align="center">
+                Treehouse Island, Inc., 9450 Southwest Gemini Drive, PMB 90505, Beaverton, OR 97008, United States
+              </p>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
   </table> 
   <!-- End of Container-->
 </body>
