--- a/index.html
+++ b/index.html
@@ -319,20 +319,52 @@
           </tr>
         </table>
       </td>
-    </tr> <!--This event Row-->
+    </tr> <!--Footer Row-->
     <tr>
-      <td style="background-color: #323952; color:white; " >
-        <table >
+      <td style="background-color: #323952; color:white; padding:100px 32px;" >
+        <table class="footer-table" >
           <tr>
-            <td >
-              <p style="margin:100px 32px;" align="center">
+            <td align="center">
+              <p style="line-height: 25px; font-size:15px;">
                 Treehouse Island, Inc., 9450 Southwest Gemini Drive, PMB 90505, Beaverton, OR 97008, United States
               </p>
+              <a style="color: #5fcf80;"  href="">
+                Unsubscribe
+              </a>
+              <a style="color: #5fcf80;" href="">
+                Manage
+              </a>
+              <a style="color: #5fcf80;" href="">
+                Preferences
+              </a>
+            </td>
+          </tr>
+          <tr>
+            <td align="center">
+              <table class="social-media">
+                <td>
+                  <img src="img/twitter-icon.png" alt="twitter icon"> 
+                </td>
+                <td>
+                  <img src="img/instagram-icon.png" alt="instagram icon"> 
+                </td>
+                <td>
+                  <img src="img/youtube-icon.png" alt="youtube icon"> 
+                </td>
+                <td>
+                  <img src="img/linkedin-icon.png" alt="twitter icon"> 
+                </td>
+                <td>
+                  <img src="img/facebook-icon.png" alt="facebook icon"> 
+                </td>
+              </table>
             </td>
           </tr>
         </table>
       </td>
-    </tr>
+    </tr> 
+    
+    <!--End of Footer-->
   </table> 
   <!-- End of Container-->
 </body>
