--- a/index.html
+++ b/index.html
@@ -324,17 +324,17 @@
       <td style="background-color: #323952; color:white; padding:100px 32px;" >
         <table class="footer-table" >
           <tr>
-            <td align="center">
-              <p style="line-height: 25px; font-size:15px;">
+            <td align="center" style="padding-bottom: 20px;">
+              <p style="line-height: 25px; font-size:15px; margin:0px;">
                 Treehouse Island, Inc., 9450 Southwest Gemini Drive, PMB 90505, Beaverton, OR 97008, United States
               </p>
-              <a style="color: #5fcf80;"  href="">
+              <a style="color: #5fcf80; padding:0px 2px; font-size:12px;"  href="">
                 Unsubscribe
               </a>
-              <a style="color: #5fcf80;" href="">
+              <a style="color: #5fcf80; padding:0px 2px; font-size:12px;" href="">
                 Manage
               </a>
-              <a style="color: #5fcf80;" href="">
+              <a style="color: #5fcf80; padding:0px 2px; font-size:12px;" href="">
                 Preferences
               </a>
             </td>
@@ -343,19 +343,19 @@
             <td align="center">
               <table class="social-media">
                 <td>
-                  <img src="img/twitter-icon.png" alt="twitter icon"> 
+                  <img src="img/twitter-icon.png" style="width:34px; height:35px; padding:8px 5px;" alt="twitter icon"> 
                 </td>
                 <td>
-                  <img src="img/instagram-icon.png" alt="instagram icon"> 
+                  <img src="img/instagram-icon.png" style="width:34px; height:35px; padding:8px 5px;"   alt="instagram icon"> 
                 </td>
                 <td>
-                  <img src="img/youtube-icon.png" alt="youtube icon"> 
+                  <img src="img/youtube-icon.png"  style="width:34px; height:35px; padding:8px 5px;"alt="youtube icon"> 
                 </td>
                 <td>
-                  <img src="img/linkedin-icon.png" alt="twitter icon"> 
+                  <img src="img/linkedin-icon.png" style="width:34px; height:35px; padding:8px 5px;" alt="twitter icon"> 
                 </td>
                 <td>
-                  <img src="img/facebook-icon.png" alt="facebook icon"> 
+                  <img src="img/facebook-icon.png" style="width:34px; height:35px; padding:8px 5px;" alt="facebook icon"> 
                 </td>
               </table>
             </td>
@@ -369,3 +369,5 @@
   <!-- End of Container-->
 </body>
 </html>
+
+<!-- Fix spacing between <a> and size of social icons-->
