this event: <td> <img> padding

--- a/index.html
+++ b/index.html
@@ -261,55 +261,53 @@
             <td align="center" style="text-align: center; padding: 20px 20px; width:100%;">
               <h2 style="color: #2e5cb7; margin:0px;"> Are you ready to start a new learning journey? Join #100DaysOfCode. </h2>
             </td>
-          </tr>     
+          </tr>
+          <tr> 
+            <td>
+              <table>
+                <tr>
+                  <td>
+                    <img src="img/days-code.png" width="175" height="195" alt="100 days of code image" style="padding: 10px 0px; margin-left: 30px;">
+                  </td>
+                  <td style="padding:0px 35px 35px;">
+                    <p style="margin: 0px; color: #576467; line-height:30px; padding:10px 5px 15px; ">       	
+                      Join the #100DaysOfCode challenge through Treehouse to receive coaching emails filled with free resources and tune into our weekly podcast.
+                    </p>
+                    <button style="background-color: #00a4bd; color:white;  border-radius:5px; font-size:16px; font-weight: bold; padding:15px 20px; border:0px; ">
+                      Learn More
+                    </button>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>   
         </table>
       </td>
     </tr>  <!-- End of Are You Ready Row--> 
 
-    <tr> <!--One hundered Row-->
-      <td>
-        <table>
-          <tr>
-            <td>
-              <img src="img/days-code.png" width="175" height="195" alt="100 days of code image" style="padding: 10px 0px; margin-left: 30px;">
-            </td>
-            <td style="padding:0px 35px 35px;">
-              <p style="margin: 0px; color: #576467; line-height:30px; padding:10px 5px 15px; ">       	
-                Join the #100DaysOfCode challenge through Treehouse to receive coaching emails filled with free resources and tune into our weekly podcast.
-              </p>
-              <button style="background-color: #00a4bd; color:white;  border-radius:5px; font-size:16px; font-weight: bold; padding:15px 20px; border:0px; ">
-                Learn More
-              </button>
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr><!-- End One hundered Row-->
-
-
     <!--This event Row-->
     <tr>
-      <td style="background-color: #F0F5F6; padding:50px;">
-        <table width="100%" ">
+      <td style="background-color: #F0F5F6; padding:50px 0px;">
+        <table width="100%" >
           <tr>
-            <td align="center" style="text-align: center; padding: 20px 20px; width:100%;">
-              <h2 style="color: #2e5cb7; margin-bottom: 10px;;"> This event is proudly supported by </h2>
+            <td align="center" style="text-align: center; padding: 0px 20px 20px; width:100%;">
+              <h2 style="color: #2e5cb7; margin:0px 0px 10px 0px;"> This event is proudly supported by </h2>
             </td>
           </tr>
           <tr>
             <td>
               <table width="100%">
                 <tr>
-                  <td>
+                  <td style="padding:0px 20px;">
                     <img src="img/tribaja-logo.png" alt="Tribaja Logo" style="width:90px; height:28px;">
                   </td>
-                  <td>
-                    <img src="img/adobe-logo.png" alt="Adobe XD Logo" style="width:90px; height:28px;">
+                  <td style="padding:0px 20px;">
+                    <img src="img/adobe-logo.png" alt="Adobe XD Logo" style="width:110px; height:23px;">
                   </td>
-                  <td>
+                  <td style="padding:0px 20px;">
                     <img src="img/pdxwit-logo.png" alt="PDXWIT Logo" style="width:90px; height:28px;">
                   </td>
-                  <td>
+                  <td style="padding:0px 20px;">
                     <img src="img/chicktech-logo.png" alt="ChickTech Logo" style="width:90px; height:28px;">
                   </td>
                   <td></td>
@@ -319,8 +317,9 @@
           </tr>
         </table>
       </td>
-    </tr> <!--Footer Row-->
-    <tr>
+    </tr> 
+    
+    <tr> <!--Footer Row-->
       <td style="background-color: #323952; color:white; padding:100px 32px;" >
         <table class="footer-table" >
           <tr>
@@ -328,13 +327,13 @@
               <p style="line-height: 25px; font-size:15px; margin:0px;">
                 Treehouse Island, Inc., 9450 Southwest Gemini Drive, PMB 90505, Beaverton, OR 97008, United States
               </p>
-              <a style="color: #5fcf80; padding:0px 2px; font-size:12px;"  href="">
+              <a style="color: #5fcf80; padding:0px 2px; font-size:12px;"  href="#">
                 Unsubscribe
               </a>
-              <a style="color: #5fcf80; padding:0px 2px; font-size:12px;" href="">
+              <a style="color: #5fcf80; padding:0px 2px; font-size:12px;" href="#">
                 Manage
               </a>
-              <a style="color: #5fcf80; padding:0px 2px; font-size:12px;" href="">
+              <a style="color: #5fcf80; padding:0px 2px; font-size:12px;" href="#">
                 Preferences
               </a>
             </td>
@@ -370,4 +369,6 @@
 </body>
 </html>
 
-<!-- Fix spacing between <a> and size of social icons-->
+
+
+<!-- Start on -->
