header: <a> fixed color

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
              <img src="img/treehouse-logo.png"   style="width:130px; height:29px;"  alt="treehouse logo">
            </td>
            <td width="50%" align="right">
-            <a href="https://https://teamtreehouse.com/techdegree" style="padding:0 5px;" >Techdegree</a>
-            <a href="https://teamtreehouse.com/tracks" style="padding:0 5px;" >Tracks</a>
-            <a href="https://teamtreehouse.com/libray" style="padding:0 5px;" >Library</a>
-            <a href="https://teamtreehouse.com/community" style="padding:0 5px;">Community</a>
+            <a href="https://https://teamtreehouse.com/techdegree" style="padding:0 5px; color: #0098b1;" >Techdegree</a>
+            <a href="https://teamtreehouse.com/tracks" style="padding:0 5px; color: #0098b1;" >Tracks</a>
+            <a href="https://teamtreehouse.com/libray" style="padding:0 5px; color: #0098b1;" >Library</a>
+            <a href="https://teamtreehouse.com/community" style="padding:0 5px; color: #0098b1;">Community</a>
           </td>
          </tr>
         </table> <!--end logo image table-->
