are you ready: added tables correctly for columns

--- a/index.html
+++ b/index.html
@@ -265,11 +265,15 @@
           </tr>
           <tr> 
             <td >
-              <table class="days-code-table">
+              <table class="left-column" align="left">
                 <tr>
                   <td>
                     <img src="img/days-code.png" width="175" height="195" alt="100 days of code image" style="padding: 10px 0px; margin-left: 30px;">
                   </td>
+                  </tr>
+                </table>
+                <table>
+                  <tr>
                   <td style="padding:0px 35px 35px;">
                     <p style="margin: 0px; color: #576467; line-height:30px; padding:10px 5px 15px; ">       	
                       Join the #100DaysOfCode challenge through Treehouse to receive coaching emails filled with free resources and tune into our weekly podcast.
