header: made responsive

--- a/index.html
+++ b/index.html
@@ -27,12 +27,21 @@
         width:100%;
         text-align: center;
       }
-      #days-code-img{
-        margin:0 !important;
-      }
+     
       .right-column{
         width:100%;
         text-align: center;
+      }
+
+      .header-table .left-column{
+        padding: 50px 0px 20px;
+      }
+      .header-table {
+        padding-bottom: 20px;
+      }
+
+      #days-code-img{
+        margin:0 !important;
       }
 
       .date-schedule-table .right-column p{
