header: fixed image size

--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
         padding-bottom: 20px;
       }
 
+      .header-img-treehouse {
+        width:258px !important;
+        height:58px !important;
+      }
+
       #days-code-img{
         margin:0 !important;
       }
@@ -66,7 +71,7 @@
             <table class="left-column" align="left"  >
               <tr>
                 <td>
-                  <img src="img/treehouse-logo.png"   style="width:130px; height:29px;"  alt="treehouse logo">
+                  <img src="img/treehouse-logo.png"  class="header-img-treehouse" style="width:130px; height:29px;"  alt="treehouse logo">
                 </td>
                </tr>   
              </table>
