header: fixed spacing between menu and padding in responsive

--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
         height:58px !important;
       }
 
+      .header-menu-links{
+        font-size:20px;
+        word-spacing:10px;
+        
+      }
+
+      .header-table .right-column{
+        padding:0px !important;
+      }
+
       #days-code-img{
         margin:0 !important;
       }
@@ -77,7 +87,7 @@
              </table>
              <table class="right-column" align="right" style="padding: 5px 0px 0px 80px;" >
                <tr>
-                <td >
+                <td class="header-menu-links">
                  <a href="https://https://teamtreehouse.com/techdegree" style="padding:0 5px; color: #0098b1;" >Techdegree</a>
                  <a href="https://teamtreehouse.com/tracks" style="padding:0 5px; color: #0098b1;" >Tracks</a>
                  <a href="https://teamtreehouse.com/libray" style="padding:0 5px; color: #0098b1;" >Library</a>
