todays schedule role: repsonsive padding

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
         margin:0 !important;
       }
 
+      .schedule-header{ 
+          padding-bottom: 10px !important;
+         
+      }
       .date-schedule-table .right-column p{
         margin:0 !important;
       }
@@ -177,7 +181,7 @@
             </td>
           </tr>
           <tr>
-            <td align="center" style="text-align: center; padding: 40px 20px; width:100%;">
+            <td align="center"  class="schedule-header" style="text-align: center; padding: 40px 20px; width:100%;">
               <h2 style="color: #2e5cb7; margin:0px;"> Today's Schedule </h2>
             </td>
           </tr>
